# cuda-insight-toolkit

./: Architecture.md  CommonCUDAITKFunctions.md  HowToWriteAGPUEnabledFilter.md  InstallingCITK.md  ProjectHome.md  UsefulTKFunctions.md  patch.3.20.0  patch_3.16.dif
CITK/Code/BasicFilters/: itkTileImageFilter.txx
CITK/Code/Common/: itkImage.h
Examples/Architecture1/: CMakeLists.txt
Examples/Architecture1/src/: CMakeLists.txt  CudaTest.h  EclipseCompat.h  itk-cpu-abs.cxx  itk-cpu-add.cxx  itk-cpu-addc.cxx  itk-cpu-binarythreshold.cxx  itk-cpu-close.cxx  itk-cpu-dilate.cxx  itk-cpu-divide.cxx  itk-cpu-dividec.cxx  itk-cpu-erode.cxx  itk-cpu-maximum.cxx  itk-cpu-mean.cxx  itk-cpu-minimum.cxx  itk-cpu-multiplyc.cxx  itk-cpu-open.cxx  itk-cpu-rescaleintensity.cxx  itk-cpu-statistics.cxx  itk-cpu-subtract.cxx  itk-cpu-subtractc.cxx  itk-gpu-abs.cxx  itk-gpu-add.cxx  itk-gpu-addc.cxx  itk-gpu-binarythreshold.cxx  itk-gpu-close.cxx  itk-gpu-divide.cxx  itk-gpu-dividec.cxx  itk-gpu-erode.cxx  itk-gpu-maximum.cxx  itk-gpu-mean.cxx  itk-gpu-minimum.cxx  itk-gpu-multiply.cu  itk-gpu-multiply.cxx  itk-gpu-multiplyc.cxx  itk-gpu-open.cxx  itk-gpu-rescaleintensity.cxx  itk-gpu-statistics.cxx  itk-gpu-subtract.cxx  itk-gpu-subtractc.cxx  (+1 more)
Examples/Architecture1/src/AbsImageFilter/: CudaAbsImageFilter.h  CudaAbsImageFilter.txx  CudaAbsImageFilterKernel.cu  CudaAbsImageFilterKernel.h
Examples/Architecture1/src/AddConstantToImageFilter/: CudaAddConstantToImageFilter.h  CudaAddConstantToImageFilterKernel.cu  CudaAddConstantToImageFilterKernel.h
Examples/Architecture1/src/AddImageFilter/: CudaAddImageFilter.h  CudaAddImageFilter.txx  CudaAddImageFilterKernel.cu  CudaAddImageFilterKernel.h
Examples/Architecture1/src/BackUpNeighborhoodFilter/: CudaNeighborhoodFilter.h  CudaNeighborhoodFilterKernel.cu  CudaNeighborhoodFilterKernel.h
Examples/Architecture1/src/BinaryThresholdImageFilter/: CudaBinaryThresholdImageFilter.h  CudaBinaryThresholdImageFilter.txx  CudaBinaryThresholdImageFilterKernel.cu  CudaBinaryThresholdImageFilterKernel.h
Examples/Architecture1/src/CudaFunctions/: CudaNeighborhoodFunctions.cu
Examples/Architecture1/src/DivideByConstantImageFilter/: CudaDivideByConstantImageFilter.h  CudaDivideByConstantImageFilter.txx  CudaDivideByConstantImageFilterKernel.cu
Examples/Architecture1/src/DivideImageFilter/: CudaDivideImageFilter.h  CudaDivideImageFilterKernel.cu
Examples/Architecture1/src/FilterTemplate/: CudaFilter.h  CudaFilterKernel.h
Examples/Architecture1/src/GrayscaleDilateImageFilter/: CudaGrayscaleDilateImageFilter.h  CudaGrayscaleDilateImageFilter.txx  CudaGrayscaleDilateImageFilterKernel.cu  CudaGrayscaleDilateImageFilterKernel.h
Examples/Architecture1/src/GrayscaleErodeImageFilter/: CudaGrayscaleErodeImageFilter.h  CudaGrayscaleErodeImageFilterKernel.cu  CudaGrayscaleErodeImageFilterKernel.h
Examples/Architecture1/src/GrayscaleMorphologicalClosingImageFilter/: CudaGrayscaleMorphologicalClosingImageFilter.h  CudaGrayscaleMorphologicalClosingImageFilter.txx
Examples/Architecture1/src/GrayscaleMorphologicalOpeningImageFilter/: CudaGrayscaleMorphologicalOpeningImageFilter.h
Examples/Architecture1/src/MaximumImageFilter/: CudaMaximumImageFilter.h  CudaMaximumImageFilter.txx  CudaMaximumImageFilterKernel.cu
Examples/Architecture1/src/MeanImageFilter/: CudaMeanImageFilter.h  CudaMeanImageFilterKernel.h
Examples/Architecture1/src/MinimumImageFilter/: CudaMinimumImageFilter.h  CudaMinimumImageFilterKernel.cu  CudaMinimumImageFilterKernel.h
Examples/Architecture1/src/MultiplyByConstantImageFilter/: CudaMultiplyByConstantImageFilterKernel.cu  CudaMultiplyByConstantImageFilterKernel.h
Examples/Architecture1/src/MultiplyImageFilter/: CudaMultiplyImageFilter.h  CudaMultiplyImageFilter.txx  CudaMultiplyImageFilterKernel.h
Examples/Architecture1/src/MultiplyImageFilter2/: CudaInPlaceImageFilter.txx  CudaMultiplyImageFilterKernel.cu
Examples/Architecture1/src/NeighborhoodFilter/: CudaNeighborhoodFilter.txx  CudaNeighborhoodFilterKernel.cu  CudaNeighborhoodFilterKernel.h
Examples/Architecture1/src/RescaleIntensityImageFilter/: CudaRescaleIntensityImageFilter.h  CudaRescaleIntensityImageFilter.txx  CudaRescaleIntensityImageFilterKernel.cu  CudaRescaleIntensityImageFilterKernel.h
Examples/Architecture1/src/StatisticsImageFilter/: CudaStatisticsImageFilter.h  CudaStatisticsImageFilter.txx  CudaStatisticsImageFilterKernel.cu  CudaStatisticsImageFilterKernel.h
Examples/Architecture1/src/SubtractConstantFromImageFilter/: CudaSubtractConstantFromImageFilter.h  CudaSubtractConstantFromImageFilter.txx  CudaSubtractConstantFromImageFilterKernel.cu  CudaSubtractConstantFromImageFilterKernel.h
Examples/Architecture1/src/SubtractImageFilter/: CudaSubtractImageFilter.h  CudaSubtractImageFilter.txx  CudaSubtractImageFilterKernel.cu  CudaSubtractImageFilterKernel.h
Examples/Architecture1/src/TestOutputs/: cpu_mult.mhd  gpu_mult.mhd  gpu_mult.raw
Examples/src/: CMakeLists.txt
article/: Article.tex
trunk/: patch.3.20.0
trunk/CITK/: CMakeLists.txt
trunk/CITK/Code/Common/: CMakeLists.txt  itkCudaImportImageContainer.h  itkCudaImportImageContainer.txx
trunk/Examples/Architecture1/: .cproject  .project  CMakeLists.txt  batchTesting
trunk/Examples/Architecture1/src/: CMakeLists.txt  CudaInPlaceImageFilter.h  CudaTest.h  itk-cpu-abs.cxx  itk-cpu-add.cxx  itk-cpu-addc.cxx  itk-cpu-close.cxx  itk-cpu-dilate.cxx  itk-cpu-divide.cxx  itk-cpu-dividec.cxx  itk-cpu-maximum.cxx  itk-cpu-mean.cxx  itk-cpu-minimum.cxx  itk-cpu-multiply.cxx  itk-cpu-multiplyc.cxx  itk-cpu-open.cxx  itk-cpu-rescaleintensity.cxx  itk-cpu-statistics.cxx  itk-cpu-subtract.cxx  itk-cuda-driver.cxx  itk-gpu-abs.cxx  itk-gpu-add.cxx  itk-gpu-addc.cxx  itk-gpu-binarythreshold.cxx  itk-gpu-close.cxx  itk-gpu-dilate.cxx  itk-gpu-divide.cxx  (+15 more)
trunk/article/: Article.tex  Article.tex~
trunk/test/: note.txt
wiki/: Architecture.wiki  CommonCUDAITKFunctions.wiki  HowToWriteAGPUEnabledFilter.wiki  HowToWriteaGPUEnabledFilter.wiki  InstallingCITK.wiki  UsefulITKFunctions.wiki  UsefulTKFunctions.wiki
(+78 files in other folders)
